LWCs/Modern Contact Card/force-app/main/default/objects/Contact/fields/Brand_1_Image__c.field-meta.xml
<CustomField>
    <fullName>Brand_1_Image__c</fullName>
    <label>Brand 1 Image</label>
    <type>Url</type>
    <description>Brand affinity image URL for slot 1 in the Modern Contact Card component</description>
</CustomField>