LWCs/Modern Contact Card/force-app/main/default/objects/Contact/fields/Brand_2_Name__c.field-meta.xml
<CustomField>
    <fullName>Brand_2_Name__c</fullName>
    <label>Brand 2 Name</label>
    <type>Text</type>
    <length>100</length>
    <description>Brand affinity label for slot 2 in the Modern Contact Card component</description>
</CustomField>