LWCs/Modern Contact Card/force-app/main/default/objects/Contact/fields/Brand_3_Image__c.field-meta.xml
<CustomField>
    <fullName>Brand_3_Image__c</fullName>
    <label>Brand 3 Image</label>
    <type>Url</type>
    <description>Brand affinity image URL for slot 3 in the Modern Contact Card component</description>
</CustomField>