LWCs/Modern Contact Card/force-app/main/default/objects/Contact/fields/Brand_3_Name__c.field-meta.xml
<CustomField>
    <fullName>Brand_3_Name__c</fullName>
    <label>Brand 3 Name</label>
    <type>Text</type>
    <length>100</length>
    <description>Brand affinity label for slot 3 in the Modern Contact Card component</description>
</CustomField>