LWCs/Modern Contact Card/force-app/main/default/objects/Contact/fields/ContactCardBackground__c.field-meta.xml
<CustomField>
    <fullName>ContactCardBackground__c</fullName>
    <label>Contact Card Background</label>
    <type>Url</type>
    <description>URL for the header background image in the Modern Contact Card component</description>
</CustomField>