LWCs/Modern Contact Card/force-app/main/default/objects/Contact/fields/ContactCardHealthScore__c.field-meta.xml
<CustomField>
    <fullName>ContactCardHealthScore__c</fullName>
    <label>Contact Card Health Score</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
    <description>Customer health score displayed in the Modern Contact Card component (0-100)</description>
</CustomField>