LWCs/Modern Contact Card/force-app/main/default/objects/Contact/fields/ContactCardPicture__c.field-meta.xml
<CustomField>
    <fullName>ContactCardPicture__c</fullName>
    <label>Contact Card Picture</label>
    <type>Url</type>
    <description>URL to the contact's profile picture for the Modern Contact Card component</description>
    <inlineHelpText>Enter the full URL to the contact's profile image</inlineHelpText>
</CustomField>