LWCs/Modern Contact Card/force-app/main/default/objects/Contact/fields/ContactCardTags__c.field-meta.xml
<CustomField>
    <fullName>ContactCardTags__c</fullName>
    <label>Contact Card Tags</label>
    <type>Text</type>
    <length>255</length>
    <description>Comma-separated tags for the Modern Contact Card component (e.g. VIP, Decision Maker, Premium)</description>
</CustomField>