LWCs/Modern Contact Card/force-app/main/default/objects/Contact/fields/Metric_1__c.field-meta.xml
<CustomField>
    <fullName>Metric_1__c</fullName>
    <label>Metric 1</label>
    <type>Text</type>
    <length>255</length>
    <description>Custom metric field 1 for the Modern Contact Card component (e.g., Account ID)</description>
    <inlineHelpText>Value displayed in Field 1 of the Modern Contact Card</inlineHelpText>
</CustomField>