LWCs/Modern Contact Card/force-app/main/default/objects/Contact/fields/Metric_2__c.field-meta.xml
<CustomField>
    <fullName>Metric_2__c</fullName>
    <label>Metric 2</label>
    <type>Text</type>
    <length>255</length>
    <description>Custom metric field 2 for the Modern Contact Card component (e.g., Support Tier)</description>
    <inlineHelpText>Value displayed in Field 2 of the Modern Contact Card</inlineHelpText>
</CustomField>