LWCs/Modern Contact Card/force-app/main/default/objects/Contact/fields/Metric_3__c.field-meta.xml
<CustomField>
    <fullName>Metric_3__c</fullName>
    <label>Metric 3</label>
    <type>Text</type>
    <length>255</length>
    <description>Custom metric field 3 for the Modern Contact Card component (e.g., Customer Type)</description>
    <inlineHelpText>Value displayed in Field 3 of the Modern Contact Card</inlineHelpText>
</CustomField>